src/test/ui/compile-fail-migration/pat-shadow-in-nested-binding.stderr
error[E0530]: let bindings cannot shadow tuple structs
  --> $DIR/pat-shadow-in-nested-binding.rs:14:10
   |
LL | struct foo(usize);
   | ------------------ a tuple struct `foo` is defined here
...
LL |     let (foo, _) = (2, 3); //~ ERROR let bindings cannot shadow tuple structs
   |          ^^^ cannot be named the same as a tuple struct

error: aborting due to previous error

For more information about this error, try `rustc --explain E0530`.
